--- a/Views/FXMLDocument.fxml
+++ b/Views/FXMLDocument.fxml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="weightdiary.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="496.0" prefWidth="514.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="weightdiary.FXMLDocumentController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+        <Button fx:id="button" layoutX="224.0" layoutY="165.0" onAction="#handleButtonAction" prefHeight="33.0" prefWidth="92.0" text="Record" />
+        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
+      <Label layoutX="142.0" layoutY="6.0" prefHeight="58.0" prefWidth="227.0" text="Weight Diary">
+         <font>
+            <Font size="38.0" />
+         </font>
+      </Label>
+      <Label layoutX="157.0" layoutY="118.0" text="New Weight:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="weightTF" layoutX="252.0" layoutY="116.0" prefHeight="25.0" prefWidth="102.0" />
+      <StackPane layoutX="85.0" layoutY="207.0" prefHeight="258.0" prefWidth="354.0">
+         <children>
+            <ImageView fitHeight="263.0" fitWidth="317.0" opacity="0.34" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@scale.jpg" />
+               </image>
+            </ImageView>
+            <Text fx:id="feedbackTxt" strokeType="OUTSIDE" strokeWidth="0.0" text="Sorry, no data yet!" textAlignment="CENTER" wrappingWidth="182.0859375">
+               <font>
+                  <Font size="41.0" />
+               </font>
+            </Text>
+         </children>
+      </StackPane>
+      <Label layoutX="70.0" layoutY="73.0" text="Enter new weight as a decimal and click Record to save entry">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
